--- a/easyService/templates/phonebook.html
+++ b/easyService/templates/phonebook.html
@@ -3,12 +3,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Title</title>
+	<title>Телефонный справочник</title>
 	<link rel="stylesheet" href="/static/phone.css">
-	<title>Телефонный справочник ТГКБ1</title>
 	<style>
 	   body {
-	    background: url(/static/fon.jpg) no-repeat;
+	    background: url(/static/fon1.jpg) no-repeat;
 	    -moz-background-size: 100%; /* Firefox 3.6+ */
 	    -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
 	    -o-background-size: 100%; /* Opera 9.6+ */
@@ -17,7 +16,7 @@
     </style>
 </head>
 <body>
-<h1 align="left" style="color:Black"><img src="/static/logo-600x600-png.png" height="150" width="150" hspace="30">Телефонный справочник Тольяттинской городской клинической больницы №1</h1>
+<h1 align="left" style="color:White"><img src="/static/logo1.png" height="150" width="150" hspace="30">Телефонный справочник ГАУ СО "Арена"</h1>
 
 
 
